--- a/personalpage/src/index.css
+++ b/personalpage/src/index.css
@@ -296,7 +296,7 @@ hr {
   box-shadow: 0 0 5px #fff;
 }
 
-@media screen and (max-width: 1024px) {
+ @media screen and (max-width: 1024px) {
    .introHead {
     text-align: center;
     font-size: 520% !important;
@@ -305,91 +305,47 @@ hr {
   .introPara{
     text-align: center;
     margin: 0 10%;
-    font-size: 220% !important;
+    font-size: 280% !important;
+  }
+  .wd-main-heading {
+    font-size: 500%;
   }
 }
 
 @media screen and (max-width: 780px) {
-  .introHead {
-    text-align: center;
-    font-size: 220% !important;
-  }
-
+  
   .introPara{
     text-align: center;
     margin: 0 5%;
-    font-size: 120% !important;
+    font-size: 320% !important;
+  }
+
+  .wd-main-heading {
+    text-align: center;
+    font-size: 300%;
   }
 }
 
-@media screen and (max-width: 640px) {
-  .project-heading h1 {
-    font-size: 200% !important;
-  }
-  h3 {
-    display: all !important;
-  }
+
+@media screen and (max-width: 720px) {
   .introHead {
     text-align: center;
-    font-size: 80% !important;
-  }
-
-  .introPara{
-    text-align: center;
-    margin: 0 5%;
-    font-size: 180% !important;
-  }
-
-}
-
-@media screen and (max-width: 414px) {
-  .introHead {
-    text-align: center;
-    font-size: 80% !important;
+    font-size: 310% !important;
   }
 
   .introPara{
     text-align: center;
     margin: 0 9%;
-    font-size: 180% !important;
+    font-size: 190% !important;
   }
 }
 
-@media screen and (max-width: 375px) {
-  .introHead {
-    text-align: center;
-    font-size: 80% !important;
-  }
 
-  .introPara{
-    text-align: center;
-    margin: 0 9%;
-    font-size: 100% !important;
-  }
-}
 
-@media screen and (max-width: 320px) {
 
-  .introPara{
-  font-size: 80% !important;
-  font-weight: 340;
-  }
 
-  .project-heading h1 {
-    font-size: 80% !important;
-    font-weight: 500!important; 
-  }
 
-  .introHead {
-    text-align: center;
-  }
 
-  .introPara{
-    text-align: center;
-    margin: 0 9%;
-    font-size: 80% !important;
-  }
-}
 
 
 
